--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 
     <script type="text/javascript">
       window.onload = function(){
-        var canvas = document.getElementById("helloCanvas");
-        var ctx = canvas.getContext("2d");
+        var ctx = document.getElementById("helloCanvas").getContext("2d");;
         ctx.fillRect(0, 0, 600, 400);
 
         var rabbit = new Image();
