--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
 
     <script type="text/javascript">
       window.onload = function(){
+        setInterval('draw()', 100);
+      }
+
+      function draw() {
         var ctx = document.getElementById("helloCanvas").getContext("2d");;
+        ctx.clearRect(0, 0, 600, 400);
         ctx.fillRect(0, 0, 600, 400);
 
         var rabbit = new Image();
         rabbit.src = "images/rabbit.png";
-        ctx.drawImage(rabbit, 300, 200);
+        ctx.drawImage(rabbit, 50, 150);
+        ctx.translate(10,0);
       }
     </script>
 
